<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="rtrk.pnrs1.ra174_2014.taskmanager.AddTaskMainScreen.AddTaskView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <EditText
                android:id="@+id/txtTaskName"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/task_name"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                >

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    style="@android:style/Widget.Material.TimePicker"
                    android:elevation="1dp"
                    android:timePickerMode="spinner">
                </TimePicker>
                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    style="@android:style/Widget.DatePicker"
                    android:elevation="1dp"
                    android:datePickerMode="spinner">
                </DatePicker>

            </LinearLayout>

            <EditText
                android:id="@+id/txtTaskDescription"
                android:layout_weight="5"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/task_description"
                android:background="@color/white"
                android:inputType="textShortMessage"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textDirection="ltr"
                 />


            <CheckBox
                android:id="@+id/chkReminder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/reminder" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnRed"
            android:background="@color/red"

            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnYellow"
            android:background="@color/yellow"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnGreen"
            android:background="@color/green"
            android:enabled="true"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddTask"
            android:text="@string/add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCancelTask"
            android:text="@string/cancel_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
